# ebook_ai

./: .gitignore  README.md  alembic.ini  compose.yml  localstack-setup.sh  pyproject.toml
alembic/versions/: 868c8d58356d_create_user_table.py  b88159d93365_create_role_table.py
src/ebook_ai/: main.py  module.py
src/ebook_ai/application/: ai_client.py  auth.py
src/ebook_ai/application/translator/: translator.py
src/ebook_ai/application/user/: user.py  user_repository.py
src/ebook_ai/models/: role.py  user.py
src/ebook_ai/ports/database/: database.py
src/ebook_ai/ports/routers/: translator.py  user.py
src/ebook_ai/ports/routers/schemas/: translation_schema.py  user_schema.py
src/ebook_ai/repositories/: user_repository.py
src/ebook_ai/utils/: file.py
volume/cache/: machine.json  service-catalog-3_7_3_dev41-1_35_24.pickle
