[project]
name = "ebook_ai"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Vinh Lx", email = "vinh.lx@outlook.com.vn"},
]
dependencies = [
    "alembic>=1.13.3",
    "psycopg2-binary>=2.9.9",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
